minzc/tests/backend_e2e/results/control_flow_c.txt
  ✅ Code generation successful

=== Generated Code Analysis ===
// MinZ C generated code
// Generated: 2025-08-06 16:51:44
// Target: Standard C (C99)

#include <stdio.h>
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>

// Type definitions
typedef uint8_t u8;
typedef uint16_t u16;
typedef uint32_t u24; // 24-bit emulated as 32-bit
typedef uint32_t u32;
typedef int8_t i8;
typedef int16_t i16;
typedef int32_t i24; // 24-bit emulated as 32-bit
typedef int32_t i32;

// Fixed-point arithmetic helpers
typedef int16_t f8_8;   // 8.8 fixed-point
typedef int16_t f_8;    // .8 fixed-point
typedef int16_t f_16;   // .16 fixed-point
typedef int32_t f16_8;  // 16.8 fixed-point
typedef int32_t f8_16;  // 8.16 fixed-point

#define F8_8_SHIFT 8
#define F_8_SHIFT 8
#define F_16_SHIFT 16
#define F16_8_SHIFT 8
#define F8_16_SHIFT 16

// String type (length-prefixed)
typedef struct {
    uint16_t len;
    char* data;
} String;

// Print helper functions
void print_char(u8 ch) {
    putchar(ch);
}

void print_u8(u8 value) {
    printf("%u", value);
}

void print_u8_decimal(u8 value) {
    printf("%u", value);
  🔨 Attempting binary generation...
tests/backend_e2e/outputs/control_flow_c.c:102:8: error: redefinition of 'result'
  102 |     u8 result = 0;
      |        ^
tests/backend_e2e/outputs/control_flow_c.c:101:8: note: previous definition is here
  101 |     u8 result = 0;
      |        ^
1 error generated.
  ❌ Binary generation failed
